✨feature: hero section

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,7 +10,7 @@
     --font-sans: "Urbanist", ui-sans-serif, system-ui, sans-serif,
         "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
         "Noto Color Emoji,";
-    --font-display: "Urbanist";
+    --font-display: "Montserrat";
 
     --color-primary: #435058;
     --color-secondary: #dcf763;
